MGRAPPS-66. Fix sonar complains